Fix Java 21 compatibility issues for Java 17 environment
Co-authored-by: feiyuchuixue <18590353+feiyuchuixue@users.noreply.github.com>